# sl-viewer-backend

./: Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: python.yml
sl_viewer_backend/: __init__.py  __main__.py
sl_viewer_backend/api/: __init__.py  log_parser.py
sl_viewer_backend/schemas/: __init__.py  logparsererror.py  logparseresponse.py  logupload.py
sl_viewer_backend/services/: log_parsing_service.py
sl_viewer_backend/validation/: log_upload.py
tests/: row.csv  rowWrong.csv  sample_test.py  test_app.py
