[tool.poetry]
name = "sl-viewer-backend"
version = "0.1.0"
description = ""
authors = ["Augusto Zanellato <augusto.zanellato@gmail.com>"]
readme = "README.md"
packages = [{include = "sl_viewer_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.23.1"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
spectree = "^1.0.3"
pydantic-computed = "^0.1.2"
sl-parser = {git = "git@github.com:sevenelevendevunipd/sl-parser"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
