[tool.poetry]
name = "sl-viewer-backend"
version = "0.1.0"
description = ""
authors = ["Augusto Zanellato <augusto.zanellato@gmail.com>"]
readme = "README.md"
packages = [{include = "sl_viewer_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.26.1"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"
spectree = "^1.0.3"
sl-parser = {git = "git@github.com:sevenelevendevunipd/sl-parser"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
