[tool.poetry]
name = "sl-viewer-backend"
version = "0.1.0"
description = ""
authors = ["Augusto Zanellato <augusto.zanellato@gmail.com>"]
readme = "README.md"
packages = [{include = "sl_viewer_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.26.1"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"
spectree = "^1.0.3"
gunicorn = "^20.1.0"
sl-parser = "^0.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.260"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
httpx = "^0.24.0"

[tool.ruff]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "PTH", "PL", "TRY", "RUF", "ERA", "Q", "N", "ANN"]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sl_viewer_backend --cov-report xml:coverage.xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
